add new hello for julia, and update hello.ipynb

--- a/src/hello_python.ipynb
+++ b/src/hello_python.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"Hello, world!\")"
+    "print(\"Hello, python!\")"
    ]
   }
  ],
