add karen-2, helper and update

--- a/notebooks/karen/karen-1.ipynb
+++ b/notebooks/karen/karen-1.ipynb
@@ -61,6 +61,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !mkdir data; mkdir data/karen\n",
+    "# !curl https://scontent-nrt1-1.cdninstagram.com/vp/9feb62bac4fd1232dc9fa06d8ef60a2b/5B7D4456/t51.2885-15/e35/18380827_208083853041745_3411566881981595648_n.jpg -o data/karen/karen_hr.jpg"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -153,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,13 +200,13 @@
     "        return torch.randn([1, self.input_noise, self.width, self.height])\n",
     "      \n",
     "class DownSampler():\n",
-    "  def __init__(self,down):        \n",
-    "    self.d_layer = nn.Sequential(\n",
-    "        nn.AvgPool2d(down)\n",
-    "    )\n",
-    "  def down(self, y):\n",
-    "    return self.d_layer(y)\n",
-    "  \n",
+    "    def __init__(self,down):        \n",
+    "        self.d_layer = nn.Sequential(\n",
+    "            nn.AvgPool2d(down)\n",
+    "        )\n",
+    "    def down(self, y):\n",
+    "        return self.d_layer(y)\n",
+    "    \n",
     "class Downsampler(nn.Module):\n",
     "    '''\n",
     "        http://www.realitypixels.com/turk/computergraphics/ResamplingFilters.pdf\n",
