--- a/tex/papers-summary/@settings/common.tex
+++ b/tex/papers-summary/@settings/common.tex
@@ -7,7 +7,7 @@
 \usepackage{enumerate}
 % \usepackage{mathrsfs}
 \usepackage[usenames]{color}
-% \usepackage{graphicx}
+\usepackage{graphicx}
 \setstretch{1.25}
 \theorembodyfont{\normalfont}
 \newtheorem{theo}{定理}[section]
