--- a/tex/papers-summary/master.tex
+++ b/tex/papers-summary/master.tex
@@ -1,6 +1,7 @@
 \documentclass[12pt,fleqn,dvipdfmx]{jarticle}
   \usepackage{docmute}
-  \input{./@settings/index}
+  \input{./@settings/common}
+  \input{./@settings/master}
   \input{./@settings/commands}
 
   \begin{document}
