--- a/tex/papers-summary/@settings/commands.tex
+++ b/tex/papers-summary/@settings/commands.tex
@@ -33,7 +33,7 @@
 }
 
 
-% PutImageInCenter{image path in @imgs}[Option{A Picture}][Option{width=8cm}][Option{h}]
+% PutImageInCenter{image path in @imgs}{label}[Option{A Picture}][Option{width=8cm}][Option{h}]
 \NewDocumentCommand {\PutImageInCenter} { m m O{A Picture} O{width=8cm} O{h} } {%
   \begin{figure}[#5]
     \includegraphics[#4]{#1}
